stellar-core/src/lang/snapshots/stellar_core__lang__scan__tests__eof.snap
---
source: stellar-core/src/lang/scan.rs
expression: "scan(\"\", & mut rodeo)"
snapshot_kind: text
---
Ok(
    TokenStream(
        [
            EOF {
                location: Location {
                    line: 1,
                    column: 0,
                    index: 0,
                },
            },
        ],
    ),
)
