stellar-core/src/lang/snapshots/stellar_core__lang__scan__tests__unexpected_char.snap
---
source: stellar-core/src/lang/scan.rs
expression: "scan(\"!\", & mut rodeo)"
snapshot_kind: text
---
Err(
    UnexpectedCharacter {
        character: '!',
        span: Span {
            start: Location {
                line: 1,
                column: 0,
                index: 0,
            },
            end: Location {
                line: 1,
                column: 1,
                index: 1,
            },
        },
    },
)
